# shipcheck

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
audits/0001-cra-approach/: REPORT.md
audits/0002-blog-demo/: REPORT.md  product-vendor.yaml
audits/0002-blog-demo/dossier/: cve-report.md  declaration-of-conformity.md  evidence-report.md  license-audit.md  scan.json  technical-documentation.md
docs/: pilot.md
docs/references/: README.md
pilots/0001-poky-scarthgap-min/: REPORT.md  kas.yml  log.txt  scan-rerun.json  scan.json
pilots/0001-poky-scarthgap-min/dossier/: cve-report.md  evidence-report.md  license-audit.md  scan.json
pilots/0001-poky-scarthgap-min/dossier-rerun/: cve-report.md  evidence-report.md  license-audit.md  scan.json
pilots/0005-code-integrity-and-hardening/: REPORT.md  kas.yml
pilots/0005-code-integrity-and-hardening/dossier/: cve-report.md  evidence-report.md  license-audit.md  scan.json
scripts/: extract_pilot_fixture.py
src/shipcheck/: __init__.py  __main__.py  cli.py  config.py  models.py  product.py
src/shipcheck/checks/: __init__.py  _cve_discovery.py  cve.py  hardening_flags.py  image_features.py  image_signing.py  license_audit.py  license_categories.yaml  registry.py  sbom.py  secureboot.py  vuln_reporting.py  yocto_cve.py
src/shipcheck/checks/code_integrity/: __init__.py  dm_verity.py  fit.py  ima_evm.py  uefi.py
src/shipcheck/cra/: __init__.py  loader.py  requirements.yaml
src/shipcheck/docs_generator/: __init__.py  annex_vii.py  declaration.py
src/shipcheck/history/: __init__.py  dossier.py  schema.py  store.py
src/shipcheck/report/: __init__.py  evidence.py  html.py  json_report.py  markdown.py  reconcile.py  score.py  terminal.py
src/shipcheck/templates/: annex_vii.md.j2  declaration_full.md.j2  declaration_simplified.md.j2  dossier.md.j2  evidence.md.j2  report.html.j2  report.md.j2
tests/: conftest.py  test_cli.py  test_config.py  test_cve_discovery.py  test_cve_producer_trait.py  test_extract_pilot_fixture.py  test_integration.py  test_models.py  test_product.py
tests/fixtures/config/: code-integrity-config.yaml  full-config.yaml  imagesigning-config.yaml  invalid-config.yaml  minimal-config.yaml  secureboot-config.yaml
tests/fixtures/cve/: legacy-cve-check-summary.json  no-cvss-score.json  sbom-cve-check-output.json  vex-bbclass-output.json
tests/fixtures/cve/yocto_summary_only/tmp/log/cve/: cve-summary.json
tests/fixtures/imagesigning/: README.md  local-no-signing.conf  local-verity.conf  rootfs.hashtree  signed.itb  unsigned.itb
tests/fixtures/licenses/core-image-agpl/: license.manifest
tests/fixtures/licenses/core-image-gpl-proprietary/: license.manifest
tests/fixtures/licenses/core-image-minimal/: license.manifest
tests/fixtures/licenses/core-image-mixed/: license.manifest
tests/fixtures/licenses/core-image-unknown/: license.manifest
tests/fixtures/product/: complete.yaml  expired_support.yaml  future_support.yaml  malformed_contact.yaml  malformed_policy_url.yaml  missing_address.yaml  missing_cvd.yaml  missing_cvd_contact.yaml  missing_end_date.yaml  no_update_mechanism.yaml  placeholder_contact.yaml  placeholder_end_date.yaml  placeholder_mechanism.yaml  placeholder_policy_url.yaml  unparseable_end_date.yaml
tests/fixtures/sbom/: missing-checksum.json  missing-supplier.json  valid-cyclonedx-1.5.json  valid-spdx-2.3.json  valid-spdx-3.0.json
tests/fixtures/secureboot/auto-conf/conf/: auto.conf  local.conf
tests/fixtures/secureboot/auto-conf/keys/: db.key
tests/fixtures/secureboot/efi-no-signing/conf/: local.conf
tests/fixtures/secureboot/efi-no-signing/tmp/deploy/images/genericx86-64/: bootx64.efi  core-image-minimal-genericx86-64.efi
tests/fixtures/secureboot/missing-keys/conf/: local.conf
tests/fixtures/secureboot/missing-keys/tmp/deploy/images/genericx86-64/: core-image-minimal-genericx86-64.efi
tests/fixtures/secureboot/no-signing/conf/: local.conf
tests/fixtures/secureboot/sbsign-class/conf/: local.conf
tests/fixtures/secureboot/sbsign-class/keys/: prod-key.pem
tests/fixtures/secureboot/signing-enabled/conf/: local.conf
tests/fixtures/secureboot/signing-enabled/keys/: db.crt
tests/fixtures/secureboot/test-keys/conf/: local.conf
tests/fixtures/secureboot/test-keys/keys/: development-db.key  test-signing-key.pem
tests/fixtures/yocto_cve/: cve-summary-kirkstone.json  cve-summary-scarthgap.json  empty.json  malformed.json
tests/test_checks/: test_code_integrity.py  test_cve.py  test_hardening_flags.py  test_image_features.py  test_image_signing.py  test_license_audit.py  test_registry.py  test_sbom.py  test_secureboot.py  test_vuln_reporting.py  test_yocto_cve.py
tests/test_cra/: test_catalog.py  test_validation.py
tests/test_docs_generator/: test_annex_vii.py  test_declaration.py
tests/test_history/: test_dossier.py  test_store.py
tests/test_report/: test_evidence.py  test_html.py  test_json.py  test_markdown.py  test_reconcile.py  test_score.py  test_terminal.py
(+6 files in other folders)
