[project]
name = "shipcheck"
version = "0.0.1"
description = "Embedded Linux compliance auditor — CRA, Secure Boot, SBOM, CVE tracking"
authors = [{name = "Javier Tia"}]
license = "Apache-2.0"
requires-python = ">=3.13"
readme = "README.md"
keywords = ["yocto", "embedded", "compliance", "cra", "sbom", "cve", "security", "firmware"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "bump-my-version",
    "pre-commit",
    "ruff",
    "ty",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-randomly>=3.15",
    "pytest-timeout>=2.3",
]

[project.scripts]
shipcheck = "shipcheck.__main__:main"

[project.urls]
Homepage = "https://github.com/jetm/shipcheck"
Repository = "https://github.com/jetm/shipcheck"
Issues = "https://github.com/jetm/shipcheck/issues"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["shipcheck"]

[tool.ruff.lint.per-file-ignores]
"src/shipcheck/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short", "--cov=shipcheck", "--cov-report=term-missing"]
timeout = 30
markers = [
    "integration: tests requiring external tools or filesystem",
]

[tool.coverage.run]
source = ["src/shipcheck"]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ty.rules]
call-non-callable = "ignore"
invalid-argument-type = "ignore"
invalid-type-form = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/shipcheck/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
